--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,7 +1,7 @@
 all: simple-example streaming-example
 
 simple-example:
-	cd .. && elm make examples/simple/Simple.elm --output=examples/simple/simple.js
+	cd .. && elm make examples/Simple/Simple.elm --output=examples/simple/simple.js
 
 streaming-example:
 	cd .. && elm make examples/streaming/Streaming.elm --output=examples/streaming/streaming.js
